# Wispr

./: .gitignore  Makefile  README.md  config.toml  pyproject.toml
native/: Package.swift
native/Sources/WisprMenuBar/: AppConfiguration.swift  AppController.swift  AppDelegate.swift  AppIdentity.swift  AppPresentationController.swift  AppStatus.swift  AudioCaptureController.swift  DictationController.swift  HistoryPanelController.swift  HistoryStore.swift  HotkeyMonitor.swift  MenuBarController.swift  OllamaFormatter.swift  Permissions.swift  PhraseStore.swift  TextInserter.swift  Utilities.swift  WhisperService.swift  main.swift
prompts/: formatter_system.txt
scripts/: bootstrap.sh  build_native_app.sh  install_launch_agent.sh  install_native_app.sh  setup_codesign_identity.sh  uninstall_launch_agent.sh
src/wispr/: __main__.py  app.py  audio.py  cli.py  config.py  formatter.py  hotkey.py  http_utils.py  logging_utils.py  output.py  pipeline.py  services.py  transcription.py
tests/: test_http_utils.py
